# tokenmeter

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: code-simplifier.md
.claude/commands/: loop-review.md  pr-review.md
.claude/skills/tauri-event-system/: SKILL.md
.github/workflows/: build-test.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  DESIGN.md
docs/zh/: ARCHITECTURE.md  DESIGN.md
src/: App.tsx  Tray.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_ccusage.rs  test_config.rs  test_provider.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  storage.rs  tray.rs  types.rs
src-tauri/src/commands/: mod.rs  providers.rs  usage.rs
src-tauri/src/services/: ccusage.rs  mod.rs  pricing.rs  script_runner.rs  shell_utils.rs
src/components/: ContributionGraph.tsx  DailyBarChart.tsx  Dashboard.tsx  ProviderEditor.tsx  Settings.tsx
src/components/icons/: ModelIcon.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/hooks/: useConfigEvents.ts  useLanguage.ts  useProviders.ts  useRefreshState.ts  useTheme.ts  useUsageData.ts
src/i18n/: index.ts
src/i18n/locales/en/: common.json  dashboard.json  providers.json  settings.json  tray.json
src/lib/: api.ts  utils.ts
src/types/: index.ts
(+5 files in other folders)
