[package]
name = "tokenmeter"
version = "0.1.0"
description = "Mac menubar usage statistics app"
authors = ["you"]
edition = "2021"

[lib]
name = "tokenmeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
boa_engine = "0.20"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
shlex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDictionary"] }
objc2-app-kit = "0.3"
